--- a/vignettes/Lab6_MissingData.Rmd
+++ b/vignettes/Lab6_MissingData.Rmd
@@ -520,14 +520,18 @@ var(mod2_alphas[,3])
 ```
 
 
-## Homework 
+## Homework
 
-1. In the lab example, we just looked at hares in the central region. Using the entire dataset, fit the two working model we ran above - one where detection is a random effect of site and one where it is a fixed effect. Use ggplot to create a graph showing the difference in the parameter estimates and calculate the variance in the mean alpha parameter value. How does the change in variance between the two models compare with our lab run on just a subset of data?
+1. Last week we talked about prior predictive checks. Try running the model we just ran in lab (detection is a random effect of site) and running a prior predictive check. Plot out a few of the posteriors for lambda and y. 
 
-2. When this data was formally analyzed, the authors used a random effect of year in the process model and a random effect of site in the detection process. Run the model with both of these random effects. Use ggplot to compare the beta1 values (the effect of landuse type on the expected abundance) produced by this new mode vs the model in Question 1. At a site with average area (scaled area = 0), what is the expected abundance for each land use type?
+Hint: Instead of putting your data in the "data" object, put it in as an initial value. Other than your data, all other information (constants, params, etc.) is still the same. 
 
-3. Since this is an abundance model, it makes sense to make a plot of abundance over time. Inside the model that you used for Question 2, create 2 *derived parameterS* that represents the total abundance of all sites of each landtype (one parameter for each landtype) in each year. Use ggplot to graph the estimated total average density by landtype over time, including the CIs.  (Note: To get density, determine the total area of all plots of each landtype, then divide your estimates by this number). 
+2. In the lab example, we just looked at hares in the central region. Using the entire dataset, fit the two working model we ran above - one where detection is a random effect of site and one where it is a fixed effect. Use ggplot to create a graph showing the difference in the parameter estimates and calculate the variance in the mean alpha parameter value. How does the change in variance between the two models compare with our lab run on just a subset of data?
 
-4. To practice converting model code to the mathematical notation expected in a scientific paper, write your model for Question 2 in its full mathematical form, including priors. 
+3. When this data was formally analyzed, the authors used a random effect of year in the process model and a random effect of site in the detection process. Run the model with both of these random effects. Use ggplot to compare the beta1 values (the effect of landuse type on the expected abundance) produced by this new mode vs the model in Question 1. At a site with average area (scaled area = 0), what is the expected abundance for each land use type?
 
-5.  On a 1-10 scale, with 1 being the worst week ever and 10 being the best, how would you rate this week's content? What lingering questions/confusion about the lecture or lab do you still have?
+4. Since this is an abundance model, it makes sense to make a plot of abundance over time. Inside the model that you used for Question 2, create 2 *derived parameterS* that represents the total abundance of all sites of each landtype (one parameter for each landtype) in each year. Use ggplot to graph the estimated total average density by landtype over time, including the CIs.  (Note: To get density, determine the total area of all plots of each landtype, then divide your estimates by this number). 
+
+5. To practice converting model code to the mathematical notation expected in a scientific paper, write your model for Question 2 in its full mathematical form, including priors. 
+
+6.  On a 1-10 scale, with 1 being the worst week ever and 10 being the best, how would you rate this week's content? What lingering questions/confusion about the lecture or lab do you still have?
