--- a/docs/articles/lectures/10_DynamicOcc/10_DynamicOcc.Rmd
+++ b/docs/articles/lectures/10_DynamicOcc/10_DynamicOcc.Rmd
@@ -28,6 +28,10 @@ source(here::here("R/zzz.R"))
 <br/>
 > Kéry & Schaub 383-411
 
+<br/>
+
+> Occupancy Estimation and Modeling : Inferring Patterns and Dynamics of Species Occurrence by Darryl I. MacKenzie, James D. Nichols, J. Andrew Royle, Kenneth H. Pollock, Larissa Bailey, and James E. Hines
+
 
 
 ---
@@ -133,90 +137,372 @@ $$\LARGE (1 - \psi) + \psi (1-p)^3$$
 
 $$\Large y_i = [\underbrace{101}_{Year\;1}\;\;\;\;\; \underbrace{000}_{Year\;2}\;\;\;\;\;\underbrace{110}_{Year\;3}\;\;\;\;\;\underbrace{100}_{Year\;4}]$$
 
+---
+## Probability of Observations
+
+#### What is the likelihood of this observation?
+
+$$\Large y_i = [\underbrace{101}_{Year\;1}\;\;\;\;\; \underbrace{000}_{Year\;2}\;\;\;\;\;\underbrace{110}_{Year\;3}]$$
+--
+
+Year 1:  $$\psi_1p_1^2(1-p_1)$$
 <br/>
-- We need a model to explain *why* occupancy can change
+--
+Year 2:  $$\psi_2(1-p_2)^3 + (1-\psi_2)$$
+<br/>
+--
+Year 3:  $$\psi_3p_3^2(1-p_3)$$
+
+---
+## Probability of Observations
+
+#### What is the likelihood of this observation?
+
+$$\Large y_i = [\underbrace{101}_{Year\;1}\;\;\;\;\; \underbrace{000}_{Year\;2}\;\;\;\;\;\underbrace{110}_{Year\;3}]$$
+Therefore $$Pr(y_i = [101\;\;\;\;\; 000 \;\;\;\;\;110 \;\;\;\;\; 100 ]| \boldsymbol{ \psi, p} ) = \\\psi_1p_1^2(1-p_1)\\\times\psi_2(1-p_2)^3 + (1-\psi_2)\\\times\psi_3p_3^2(1-p_3)$$
+
 
 ---
 ## Occupancy Dynamics
 
-#### What causes changes in occupancy?
+Remember that occupancy is a *markovian* process - therefore occupancy status is not independent between years! We need a model to explain *why* occupancy can change.
 
-Assume some site is occupied in year 1:
+Assume some site is occupied in year 1. In year 2, it can either stay occupied (survive) or no longer be occupied (go 'extinct')
+
 ```{r, warning = F, message=FALSE}
 library(ggplot2)
 
 g <- data.frame(x = c(0,1, -1),
-                y = c(1,1,1))
+                y = c(3,1,1),
+                occ = c('1', '1', '0'))
+lines <- data.frame(x = c(0, -.825, 0, .825),
+                    y = c(3,1.35,3,1.35))
 
-g <- graph_from_data_frame(
-  d = data.frame(from = c(1, 1), to = c(2, 3), label = c('1-\U03C6', '\U03C6')), 
-  directed = TRUE,
-  vertices = data.frame(name = c(1, 2, 3), label = c('1', '0', '1'))
-)
+a <- ggplot(g, aes(x = x, y= y))+
+  geom_line(data = lines[1:2,], arrow = arrow(angle = 15, type = 'closed', ends = 'both'))+
+  geom_line(data = lines[3:4,], arrow = arrow(angle = 15, type = 'closed', ends = 'both'))+
+  geom_point(cex = 30, aes(col = occ))+
+  geom_text(aes(label = occ), size = 15)+
+  geom_label(x = -.5, y = 2, label = "1-phi", parse = TRUE, size = 8)+
+   geom_label(x = .5, y = 2, label = "phi", parse = TRUE, size =8)+
+  theme_void()+
+  xlim(-2, 2)+
+  ylim(0,4)+
+  theme(legend.position = 'none')
 
+g2 <- data.frame(x = c(0,1, -1),
+                y = c(3,1,1),
+                occ = c('0', '1', '0'))
+
+b <- ggplot(g2, aes(x = x, y= y))+
+  geom_line(data = lines[1:2,], arrow = arrow(angle = 15, type = 'closed', ends = 'both'))+
+  geom_line(data = lines[3:4,], arrow = arrow(angle = 15, type = 'closed', ends = 'both'))+
+  geom_point(cex = 30, aes(col = occ))+
+  geom_text(aes(label = occ), size = 15)+
+  geom_label(x = -.5, y = 2, label = "1-gamma", parse = TRUE, size = 8)+
+   geom_label(x = .5, y = 2, label = "gamma", parse = TRUE, size = 8)+
+  theme_void()+
+  xlim(-2, 2)+
+  ylim(0,4)+
+  theme(legend.position = 'none')
 ```
 
-```{r, eval = F, echo = F}
-library(DiagrammeR)
-node_list <- data.frame(id = 1:3, label = c(1,0,1))
-edge_list <- data.frame(from = c(1,1), to = c(2,3), label = c('1-\\U03C6', '<$\\phi$>'))
-igraph1 <- create_graph() %>% 
-  add_nodes_from_table(
-    table = node_list,
-    label_col = label
-  ) %>%
-  add_edges_from_table(
-    table = edge_list,
-    from_col = from,
-    to_col = to,
-    from_to_map = id_external
-  ) %>%
-  select_nodes(conditions = label == 1) %>%
-  set_node_attrs_ws(node_attr = fillcolor, value = "orange") %>%
-  clear_selection()
-render_graph(igraph1, layout = 'tree', node_attrs = 'labelloc = t')
+```{r, echo = F, eval=T, include= T, fig.height = 6.25}
+a
 ```
-```{r, eval = T, echo = F, fig.width= 3.5}
 
-a_graph <-
-   create_graph() %>%
-   add_node(node_aes = node_aes(
-       color = "steelblue",
-       fillcolor = "lightblue",
-       fontcolor = "gray35"
-     ))
-render_graph(a_graph)
-```
 ---
-#### What causes changes in occupancy?
+## Occupancy Dynamics
 
-In year 2, it can either stay occupied (survive) or no longer be occupied:
+Similarly, a site can be empty in year 1. In year 2, it can either become occupied (colonization) or remain unoccupied. 
 
-```{r, eval = T, echo = F, fig.width= 3.5}
-library(DiagrammeR)
-a_graph <-
-   create_graph() %>%
-   add_node(node_aes = node_aes(
-       color = "steelblue",
-       fillcolor = "lightblue",
-       fontcolor = "gray35"
-     ))%>%
-  add_node() %>%
-  add_edge(from = 1, to = 2)
-render_graph(a_graph)
+```{r, echo = F, eval=T, include= T, fig.height = 6.25}
+b
 ```
----
 
 ---
 ## Multi-season (dynamic) occupancy model
 
 - In year 1:
 $$\Large z_{i,1} \sim Bernoulli(\psi)$$
+<br/>
 
 - In years 2+:
-$$\Large z_{i,t} \sim Bernoulli(z_{i,t-1}(1-\epsilon)+(1-z_{i,t-1}\gamma))$$
+$$\Large z_{i,t} \sim Bernoulli(z_{i,t-1}(1-\phi)+(1-z_{i,t-1})\gamma)$$
 
-- $\Large z_{i,t}$ Binary occupancy state
-- 
 
+- $\Large z_{i,t}$ = Binary occupancy state
+
+- $\Large\psi$ = Initial occupancy probability 
+
+- $\Large\phi$ = Survival probability
+
+- $\Large\gamma$ = Colonization probability 
+
+*Some authors will use different greek letters 
+
+---
+## Multi-season (dynamic) occupancy model
+
+We can easily model any of our probabilities ($\psi$,  $\phi$,  $\gamma$) as functions of covariates. 
+
+$$logit(\Large\psi_i) = \beta_0 + \beta_1\boldsymbol{x_i}$$
+$$logit(\Large\phi_t) = \alpha_0 + \alpha_1\boldsymbol{x_t}  ...  $$
+
+---
+# Probability of Occurrence
+
+There are several derived quantites that are often of interest. 
+
+<br/> 
+
+Probability of occurrence is just the mean $\psi$ at average covariate conditions. We calculate this via $\phi$ and $\gamma$. 
+
+$$\Large \hat{\psi_1} = logit(\beta_0)$$
+For $t$ > 1
+
+$$\Large \hat{\psi_t} = \hat{\psi}_{t-1}\phi_{t-1} + (1-\hat{\psi}_{t-1})\gamma_{t-1}$$
+---
+# Turnover 
+
+Turnover is another common derived quantity. This can be defined multiple ways, though the most common is the proportion of all sites that *just* became occupied relative to the total number of occupied sites. 
+
+<br/> 
+
+You can calculate this as either expected or realized turnover, though expected is more common.  
+
+<br/>
+
+$$\Large \tau_{t} = \frac{(1-\hat{\psi}_{t})\gamma_{t}}{\hat{\psi}_{t}} =\frac{(1-\hat{\psi}_{t})\gamma_{t}}{\hat{\psi}_{t}\phi_{t} + (1-\hat{\psi}_{t})\gamma_{t}}$$
+
+---
+# Growth Rate
+
+Finally, some authors like to include a growth rate parameter, which is just the rate of change in occupancy probability over time. 
+
+<br/>
+
+$$\Large \lambda_t = \frac{\hat{\psi_t}}{\hat{\psi}_{t-1}}$$
+
+---
+
+
+## In Class Exercise 
+
+Simulate 15 years of a dynamic occupancy system using the following information:
+
+- `set.seed(55)` 
+
+- $\psi_1$ = .62
+
+- $\phi$ = .8 
+
+- $\gamma$ = .2
+
+- nsites = 40
+
+- Binomial detection process with $p$ = .4 and 4 site visits per year
+
+---
+
+## In Class Exercise 
+
+```{r, echo = T}
+set.seed(55)
+nyears <- 15
+psi1 <- .62
+phi <- .8
+gamma <- .1
+nsites <- 40
+nvisits <- 4
+p <- .4
+
+z <- y <-array(NA, c(nsites, nyears))
+z[,1] <- rbinom(nsites, 1, psi1)
+for(i in 1:nsites){
+  y[i,1] <- rbinom(1, z[i,1]*nvisits, p)
+    for(t in 2:nyears){
+      z[i, t] <- rbinom(1, 1, z[i,t-1]*(1-phi)+(1-z[i,t-1])*gamma)
+      y[i, t] <- rbinom(1, z[i,t]*nvisits, p)
+  }
+}
+
+```
+
+---
+
+## In Class Exercise 
+
+
+What proportion of sites were occupied in each year?
+
+--
+
+```{r, eval = T, echo = T}
+colSums(z)/nsites
+```
+
+<br/>
+
+--
+
+How about observed occupancy? 
+
+--
+
+```{r, echo = T}
+colSums(y > 0)/nsites
+```
+
+---
+## In Class Exercise 
+
+What's the expected probability of occurence? 
+
+$$\hat{\psi_1} = logit(\beta_0)$$
+
+For $t$ > 1
+
+$$\hat{\psi_t} = \hat{\psi}_{t-1}\phi_{t-1} + (1-\hat{\psi}_{t-1})\gamma_{t-1}$$
+
+
+```{r, echo = T}
+psi <- array(NA, nyears)
+psi[1] <- psi1
+for(t in 2:nyears){
+  psi[t] <- psi[t-1]*phi + (1-psi[t-1])*gamma
+}
+psi
+```
+
+---
+# Expected vs Realized Occupancy
+
+```{r, fig.height = 5.5}
+gg_1 <- data.frame(Year = 1:nyears,
+                   Occupancy = c(psi,colSums(z)/nsites, colSums(y > 0)/nsites),
+                   Type = rep(c('Expected', 'Realized', 'Observed'), each = nyears))
+ggplot(gg_1, aes(x = Year, y = Occupancy, col = Type))+
+  geom_line()+
+  geom_point(cex = 5)+
+  theme_classic()+
+  theme(axis.text = element_text(size = 15), axis.title = element_text(size = 20), legend.text = element_text(size = 15), legend.title = element_text(size = 20))
+```
+
+---
+## Nimble Model
+
+```{r, eval = T, echo =T}
+occ.mod <- nimbleCode({
+for(i in 1:nsites){
+  z[i,1] ~dbern(psi)
+  y[i,1] ~dbinom(p, z[i,1]*nvisits)
+  
+  for(t in 2:nyears){
+    z[i, t] ~dbern(z[i,t-1]*(1-phi)+(1-z[i,t-1])*gamma)
+    y[i, t] ~dbinom(p, z[i,t]*nvisits)
+  } #end t
+} #end i
+  
+gamma ~ dbeta(1, 1) 
+phi ~ dbeta(1, 1) 
+p ~ dbeta(1, 1)
+psi ~ dbeta(1,1)
+})
+```
+
+
+---
+## Nimble Model
+
+```{r, eval = T, echo =T}
+params <- c('gamma', 'phi', 'p', 'psi')
+n.c <- list(nsites = nsites, nvisits = nvisits, nyears = nyears)
+n.d <- list(y =y)
+n.i <- function()list(p = runif(1), gamma = runif(1), phi = runif(1), psi = runif(1))
+```
+
+--
+
+Initial values for $z$ can be tricky - we need to make sure we don't suggest a site is unoccupied if we had observations there 
+<br/>
+--
+One option is to start anywhere with y = 0 as unoccupied
+
+```{r, eval = T, echo =T}
+z.init <- (y >0)*1
+n.i <- function()list(p = runif(1), gamma = runif(1), phi = runif(1), psi = runif(1), z.init =z.init)
+```
+
+--
+Alternatively, flip a coin for any sites where y = 0
+```{r, eval = T, echo =T}
+z.init <- matrix(rbinom(nsites*nyears, 1, .5), ncol = nyears)
+z.init[which(y > 0)] <- 1 
+n.i <- function()list(p = runif(1), gamma = runif(1), phi = runif(1), psi = runif(1), z =z.init)
+```
+
+---
+## Run the model in Nimble
+
+```{r, echo = T, eval = F}
+occ_out <- nimbleMCMC(code = occ.mod,
+                     data = n.d,
+                     constants = n.c,
+                     inits = n.i(),
+                     monitors = params,
+                     thin = 1,
+                     niter = 5000,
+                     nburnin = 2500,
+                     nchains = 3,
+                     samplesAsCodaMCMC = TRUE
+                      )
+```
+
+```{r}
+occ_out <- readRDS('occ_out1.rds')
+```
+---
+## Check the model
+```{r, eval=T, fig.height=4.5, fig.width=8}
+MCMCvis::MCMCtrace(occ_out, pdf = F)
+```
+
+---
+## Compare with simulation
+```{r, eval=T}
+est <- (summary(occ_out)$quantiles)
+est <- cbind(est, c(gamma, p, phi, psi1))
+colnames(est)[6] <- 'true'
+knitr::kable(est)
+```
+
+---
+## Expansions
+
+Royle and Dorazio (2008) suggested a reparameterization of this model that can sometimes help with convergence. 
+
+<br/> 
+
+Before we had: 
+$$\Large z_{i,t} \sim Bernoulli(z_{i,t-1}(1-\phi)+(1-z_{i,t-1})\gamma)$$
+<br/>
+
+--
+Instead, let:
+
+$$\Large z_{i,t} \sim Bernoulli(\pi_{i,t})$$
+
+$$\Large logit(\pi_{i,t}) = \alpha_{t-1} + \beta_{t-1}*z_{i,t-1}$$
+
+---
+## Expansions
+
+$$\Large logit(\pi_{i,t}) = \alpha_{t-1} + \beta_{t-1}*z_{i,t-1}$$
+
+We can then derive $\phi$ and $\gamma$
+
+$$\Large logit(\phi_{i,t}) = \alpha_{t-1} + \beta_{t-1}$$
+
+$$\Large logit(\gamma_{i,t}) = \alpha_{t-1}$$
 
